test/corpus/expressions.txt
================================================================================
Multiplication expression
================================================================================

45 * 3

--------------------------------------------------------------------------------

(source_file
  (statement
    (multiplicative_expression
      (integer_literal)
      (integer_literal))))

================================================================================
Safe Navigation
================================================================================

a?.b()
a
?.b()
a?.
b()
a
?.
b()

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (simple_identifier)
        selector: (simple_identifier))
      args: (value_arguments)))
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (simple_identifier)
        selector: (simple_identifier))
      args: (value_arguments)))
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (simple_identifier)
        selector: (simple_identifier))
      args: (value_arguments)))
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (simple_identifier)
        selector: (simple_identifier))
      args: (value_arguments))))

================================================================================
Function calls
================================================================================

print("Hello World!")
sum(1, 2)

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content))))))
  (statement          
    (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (integer_literal))
        (value_argument
          (integer_literal))))))

================================================================================
When expression
================================================================================

val x = 1
val y = when(x) {
        1 -> true
        2 -> false
    }

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (integer_literal))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (when_expression
      (when_subject
        (simple_identifier))
      (when_entries
        (when_entry
          (when_condition
            (integer_literal))
          (boolean_literal))
        (when_entry
          (when_condition
            (integer_literal))
          (boolean_literal))))))

================================================================================
When expression with type arguments
================================================================================

when (this) {
    is DispatchedCoroutine<*> -> return null
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (when_expression
      (when_subject
        (this_expression))
      (when_entries
        (when_entry
          (when_condition
            (type_test
              type: (user_type
                (type_identifier)
                (type_arguments
                  (type_projection)))))
          (return_expression
            (null_literal)))))))

================================================================================
Value declaration with receiver type
================================================================================

val MyDate.s: String get() = "hello"

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    receiver_type: (receiver_type
      type: (user_type
      (type_identifier)))
    var_decl: (variable_declaration
      id: (simple_identifier)
      type: (user_type
        (type_identifier)))
    (getter
      (function_body
        expression: (string_literal (string_content))))))

================================================================================
Expect as an expression
================================================================================

val x = expect(1)

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (integer_literal))))))

================================================================================
Expect as a top-level expression
================================================================================

expect(1)

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (integer_literal))))))

================================================================================
Expect as a platform modifier
================================================================================

expect fun randomUUID(): String

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    modifiers: (modifiers
      (platform_modifier))
    name: (simple_identifier)
    parameters: (function_value_parameters)
    type: (user_type
      (type_identifier))))

================================================================================
Less than for generics
================================================================================

foo<Int>(1,2)
foo<Int>(1)

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (simple_identifier)
      (type_arguments
        (type_projection
          type: (user_type
            (type_identifier))))
      args: (value_arguments
        (value_argument
          (integer_literal))
        (value_argument
          (integer_literal)))))
  (statement
    (call_expression
      expression: (simple_identifier)
      (type_arguments
        (type_projection
          type: (user_type
            (type_identifier))))
      args: (value_arguments
        (value_argument
          (integer_literal))))))

================================================================================
Less than for comparison
================================================================================

val x = a<b
val y = a>b
val z = a<b>c
// this is parsed as a generic, but could also be parsed as a comparison
val w = a<b>(c)
val a = a<2>(3)

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (comparison_expression
      (simple_identifier)
      (simple_identifier)))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (comparison_expression
      (simple_identifier)
      (simple_identifier)))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (comparison_expression
      (comparison_expression
        (simple_identifier)
        (simple_identifier))
      (simple_identifier)))
  (line_comment)    
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (call_expression
      expression: (simple_identifier)
      (type_arguments
        (type_projection
          type: (user_type
            (type_identifier))))
      args: (value_arguments
        (value_argument
          (simple_identifier)))))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (comparison_expression
      (comparison_expression
        (simple_identifier)
        (integer_literal))
      (parenthesized_expression
        (integer_literal)))))

================================================================================
Lambda Expressions
================================================================================

foo.forEach { (index, value) -> 2 }

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (simple_identifier)
        selector: (simple_identifier))
      lambda_arg: (annotated_lambda
        (lambda_literal
          parameters: (lambda_parameters
            (multi_variable_declaration
              (variable_declaration
                id: (simple_identifier))
              (variable_declaration
                id: (simple_identifier))))
          body: (statements
            (statement
              (integer_literal))))))))

================================================================================
Function call with trailing lambda
================================================================================

with(s) { length }

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (simple_identifier)))
      lambda_arg: (annotated_lambda
        (lambda_literal
          body: (statements
            (statement
              (simple_identifier))))))))

================================================================================
Multiple Statements on a Single Line
================================================================================

fun main() { val temp = b.y; b.y = b.z; b.z = temp }

when (dir) {
  1 -> { val temp = b.y; b.y = b.z; b.z = temp }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block
        (statements
          (statement
            (property_declaration
              (binding_pattern_kind)
              var_decl: (variable_declaration
                id: (simple_identifier))
              initializer: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))))
          (statement
            (assignment
              left: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))
              right: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))))
          (statement
            (assignment
              left: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))
              right: (simple_identifier)))))))
  (statement
    (when_expression
      (when_subject
        (simple_identifier))
      (when_entries
        (when_entry
          (when_condition
            (integer_literal))
            (block
              (statements
                (statement
                  (property_declaration
                    (binding_pattern_kind)
                    var_decl: (variable_declaration
                      id: (simple_identifier))
                    initializer: (dot_qualified_expression
                      receiver: (simple_identifier)
                      selector: (simple_identifier))))
                (statement
                  (assignment
                    left: (dot_qualified_expression
                      receiver: (simple_identifier)
                      selector: (simple_identifier))
                    right: (dot_qualified_expression
                      receiver: (simple_identifier)
                      selector: (simple_identifier))))
                (statement
                  (assignment
                    left: (dot_qualified_expression
                      receiver: (simple_identifier)
                      selector: (simple_identifier))
                    right: (simple_identifier))))))))))

================================================================================
Comments in Strings
================================================================================

val comments = foo("//")
val comments = foo("hello //")
val comments = foo("// there")
val comments = foo("hello // there")
val comments = """ 
  // hey there's a
  
  /* comment or two here */
"""
val comments = """ // and here """ 

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content))))))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content))))))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content))))))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content))))))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (string_literal
      (string_content)))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (string_literal
      (string_content))))

================================================================================
Qualified this/super expressions
================================================================================

class Square() : Rectangle(), Polygon {
    override fun draw() {
        this@Square.draw()
        super@Square.draw()
        super<Polygon>.draw()
        super<Rectangle>@Square.draw()
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    (primary_constructor
      (class_parameters))
    (delegation_specifier
      (constructor_invocation
        (user_type
          (type_identifier))
        (value_arguments)))
    (delegation_specifier
      (user_type
        (type_identifier)))
    body: (class_body
      (function_declaration
        modifiers: (modifiers
          (member_modifier))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body
          (block
            (statements
              (statement
                (call_expression
                  expression: (dot_qualified_expression
                    receiver: (this_expression
                      (type_identifier))
                    selector: (simple_identifier))
                  args: (value_arguments)))
              (statement
                (call_expression
                  expression: (dot_qualified_expression
                    receiver: (super_expression
                      (type_identifier))
                    selector: (simple_identifier))
                  args: (value_arguments)))
              (statement
                (call_expression
                  expression: (dot_qualified_expression
                    receiver: (super_expression
                      type: (user_type
                        (type_identifier)))
                    selector: (simple_identifier))
                  args: (value_arguments)))
              (statement
                (call_expression
                  expression: (dot_qualified_expression
                    receiver: (super_expression
                      type: (user_type
                        (type_identifier))
                      (type_identifier))
                    selector: (simple_identifier))
                  args: (value_arguments))))))))))

================================================================================
If else-if else expression
================================================================================

if (cond1) {
	println("cond1")
} else if (cond2) {
	println("cond2")
} else {
	println("cond3")
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (if_expression
      condition: (simple_identifier)
      consequence: (block
        (statements
          (statement
            (call_expression
              expression: (simple_identifier)
              args: (value_arguments
                (value_argument
                  (string_literal
                    (string_content))))))))
      alternative: (if_expression
        condition: (simple_identifier)
        consequence: (block
          (statements
            (statement
              (call_expression
                expression: (simple_identifier)
                args: (value_arguments
                  (value_argument
                    (string_literal
                      (string_content))))))))
        alternative: (block
          (statements
            (statement
              (call_expression
                expression: (simple_identifier)
                args: (value_arguments
                  (value_argument
                    (string_literal
                      (string_content))))))))))))

================================================================================
If else expression with assignment
================================================================================

if (cond1)
  a = 1
else 
	a = 2

--------------------------------------------------------------------------------

(source_file
  (statement
    (if_expression
      condition: (simple_identifier)
      consequence: (assignment
        left: (simple_identifier)
        right: (integer_literal))
      alternative: (assignment
        left: (simple_identifier)
        right: (integer_literal)))))

================================================================================
Increment/decrement expressions
================================================================================

x++
--x
arr[0]++
--arr[0]

--------------------------------------------------------------------------------

(source_file
  (statement
    (postfix_expression
      expression: (simple_identifier)))
  (statement   
    (prefix_expression
      expression: (simple_identifier)))
  (statement    
    (postfix_expression
      expression: (index_access_expression
        expression: (simple_identifier)
        index: (integer_literal))))
  (statement    
    (prefix_expression
      expression: (index_access_expression
        expression: (simple_identifier)
        index: (integer_literal)))))

================================================================================
Delegation
================================================================================

fun f(a: A): A {
    return object : A by a {
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    type: (user_type
      (type_identifier))
    body: (function_body
      (block
        (statements
          (statement
            (return_expression
              (object_literal
                (delegation_specifier
                  (explicit_delegation
                    (user_type
                      (type_identifier))
                    (simple_identifier)))
                (class_body)))))))))

================================================================================
Array access call
================================================================================

configurationElements[0].substringBefore("?")

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (index_access_expression
          expression: (simple_identifier)
          index: (integer_literal))
        selector: (simple_identifier))
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content)))))))

================================================================================
Postfix expression call
================================================================================

input!!.copyTo(it)

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (dot_qualified_expression
        receiver: (postfix_expression
          expression: (simple_identifier))
        selector: (simple_identifier))
      args: (value_arguments
        (value_argument
          (simple_identifier))))))

================================================================================
Call expressions on lambdas
================================================================================

suppressions
    .sorted()
    .joinToString()
    .let { sortedSuppressions -> "@file:${suppressType.annotationName}($sortedSuppressions)" }
    .let { annotation ->
        PsiFileFactory
            .getInstance(psi.project)
            .createFileFromText(KotlinLanguage.INSTANCE, annotation)
            ?.firstChild
            ?: throw IllegalStateException("Can not create annotation '$annotation'")
    }.node

--------------------------------------------------------------------------------

(source_file
  (statement
    (dot_qualified_expression
      receiver: (call_expression
        expression: (dot_qualified_expression
          receiver: (call_expression
            expression: (dot_qualified_expression
              receiver: (call_expression
                expression: (dot_qualified_expression
                  receiver: (call_expression
                    expression: (dot_qualified_expression
                      receiver: (simple_identifier)
                      selector: (simple_identifier))
                    args: (value_arguments))
                  selector: (simple_identifier))
                args: (value_arguments))
              selector: (simple_identifier))
            lambda_arg: (annotated_lambda
              (lambda_literal
                parameters: (lambda_parameters
                  (variable_declaration
                    id: (simple_identifier)))
                body: (statements
                  (statement
                    (string_literal
                      (string_content)
                      (interpolated_expression
                        (dot_qualified_expression
                          receiver: (simple_identifier)
                          selector: (simple_identifier)))
                      (string_content)
                      (interpolated_identifier)
                      (string_content)))))))
          selector: (simple_identifier))
        lambda_arg: (annotated_lambda
          (lambda_literal
            parameters: (lambda_parameters
              (variable_declaration
                id: (simple_identifier)))
            body: (statements
              (statement
                (elvis_expression
                  (dot_qualified_expression
                    receiver: (call_expression
                      expression: (dot_qualified_expression
                        receiver: (call_expression
                          expression: (dot_qualified_expression
                            receiver: (simple_identifier)
                            selector: (simple_identifier))
                          args: (value_arguments
                            (value_argument
                              (dot_qualified_expression
                                receiver: (simple_identifier)
                                selector: (simple_identifier)))))
                        selector: (simple_identifier))
                      args: (value_arguments
                        (value_argument
                          (dot_qualified_expression
                            receiver: (simple_identifier)
                            selector: (simple_identifier)))
                        (value_argument
                          (simple_identifier))))
                    selector: (simple_identifier))
                  (throw_expression
                    (call_expression
                      expression: (simple_identifier)
                      args: (value_arguments
                        (value_argument
                          (string_literal
                            (string_content)
                            (interpolated_identifier)
                            (string_content))))))))))))
      selector: (simple_identifier))))

================================================================================
Class literal access
================================================================================

SceneStateParameters::class.java

--------------------------------------------------------------------------------

(source_file
  (statement
    (dot_qualified_expression
      receiver: (callable_reference
        (user_type
          (type_identifier)))
      selector: (simple_identifier))))

================================================================================
Lambda parameters with trailing comma
================================================================================

{ a, b, -> a.length < b.length }

--------------------------------------------------------------------------------

(source_file
  (statement
    (lambda_literal
      parameters: (lambda_parameters
        (variable_declaration
          id: (simple_identifier))
        (variable_declaration
          id: (simple_identifier)))
      body: (statements
        (statement
          (comparison_expression
            (dot_qualified_expression
              receiver: (simple_identifier)
              selector: (simple_identifier))
            (dot_qualified_expression
              receiver: (simple_identifier)
              selector: (simple_identifier))))))))

================================================================================
Class literal with this
================================================================================

this::class.simpleName
this@A::class.simpleName

--------------------------------------------------------------------------------

(source_file
  (statement
    (dot_qualified_expression
      receiver: (callable_reference
        (this_expression))
      selector: (simple_identifier)))
  (statement
    (dot_qualified_expression
      receiver: (callable_reference
        (this_expression
          (type_identifier)))
      selector: (simple_identifier))))

================================================================================
When expression with if else
================================================================================

when (this) {
    else -> "$packageName.$WILDCARD_CHAR" + if (withSubpackages) WILDCARD_CHAR else ""
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (when_expression
      (when_subject
        (this_expression))
      (when_entries
        (else_entry
          (additive_expression
            (string_literal
              (interpolated_identifier)
              (string_content)
              (interpolated_identifier))
            (if_expression
              condition: (simple_identifier)
              consequence: (simple_identifier)
              alternative: (string_literal))))))))

================================================================================
When expression with trailing comma
================================================================================

when (x) {
	1, -> println("x")
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (when_expression
      (when_subject
        (simple_identifier))
      (when_entries  
        (when_entry
          (when_condition
            (integer_literal))
              (call_expression
                expression: (simple_identifier)
                args: (value_arguments
                  (value_argument
                    (string_literal
                      (string_content))))))))))
